--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="primary_color">#0098DA</color>
+    <color name="secondary_color">#1454CC</color>
+    <color name="dark_black">#323748</color>
+    <color name="green_color">#058E3F</color>
+    <color name="red_color">#FC0808</color>
+
 </resources>
